# tauri-v2-wgpu

./: vite.config.ts
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
